Move css for resources and population to shared css file. Create Planet component. Eslint polizei. Fi typo abundancies > abundances. Change population to workers. Add x to quantity of ships.

--- a/src/scss/template/_shared.scss
+++ b/src/scss/template/_shared.scss
@@ -71,11 +71,11 @@ h3 {
 }
 
 .resource-metal {
-    color: white;
+    color: #EEEEEE;
 }
 
 .resource-mineral {
-    color: #e94021;
+    color: #E33E4C;
 }
 
 .resource-food {
@@ -83,7 +83,11 @@ h3 {
 }
 
 .resource-energy {
-    color: #4884d8;
+    color: #6596DA;
+}
+
+.workers {
+    color: #EAC861;
 }
 
 table.collapsed {
