Add Planet component with children PlanetView and PlanetEdit. Add package mdi-vue for material design icons. Remove unnecessary parent div's from components. Add bottom margin to views.

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -41,6 +41,10 @@
     margin-top: $base-spacing;
 }
 
+.margin-bottom {
+    margin-bottom: $base-spacing;
+}
+
 .sticky {
     position: sticky;
 }
